package ovinger.oving11;

/**
 *
 */
public class Main {


    public static void main(String[] args) {
        Property property1 = new Property(1445, "Gloppen", 77, 631, 1017.5, "Jens Olsen");
        Property property2 = new Property(1445, "Gloppen", 77, 131, "Syningom", 661.3, "Nicolay Madsen");
        Property property3 = new Property(1445, "Gloppen", 75, 19, "Fugletun", 650.6, "Evilyn Jensen");
        Property property4 = new Property(1445, "Gloppen", 74, 188, 1457.2, "Karl Ove Bråten");
        Property property5 = new Property(1445, "Gloppen", 69, 47, "Høiberg", 1339.4, "Elsa Indregård");

        PropertyRegister register1 = new PropertyRegister();

        register1.addProperty(property1);
        register1.addProperty(property2);
        register1.addProperty(property3);
        register1.addProperty(property4);
        register1.addProperty(property5);

        UserInterface userInterface = new UserInterface(register1);

        userInterface.start();
    }
}
